Revision history for Perl extension Compras-UA

{{$NEXT}}

0.04 2020-11-22T17:09:27Z
    - add serializers to model issue #1
    - a role to 'follow up links' in model
    - improve tests

0.03 2020-11-22T00:59:27Z
    - role to add extra attributes to models
    - add many more models
    - script accepts parameters to search different records by id

0.02 2020-11-17T12:55:52Z
    - improve logging
    - new (raw/collection) models issue #4
    - fix critical dependency

0.01 2020-11-09T20:50:23Z

    - rc1: basic functionality
    - simple models