@@ -7,15 +7,16 @@ our $TARGET = {
 
     #'Compras::Model::NoPublicBidding' => 1,
     'Compras::Model::Roles::ExpandLinks' => 1,
+
     #'Compras::Model::Roles::Serialize' => 1,
 };
 
 use_ok $_ for qw(
-  Compras::UA
+  Compras::Search
 );
 
-sub build_ua( @args ) {
-    my $ua = $args[0] eq 'HASH' ? Compras::UA->new( $args[0] ) : Compras::UA->new(@args);
+sub build_search( @args ) {
+    my $ua = $args[0] eq 'HASH' ? Compras::Search->new( $args[0] ) : Compras::Search->new(@args);
     $ua->log_level('fatal') unless $debug;
     return $ua;
 }
@@ -39,15 +40,20 @@ sub apply_role ( $role, $collection ) {
 
 sub get_model_args {
     return (
-        'Compras::Model::TradingFloors' => { module => 'pregoes', params => { co_uasg => 254448 } },
-        'Compras::Model::IRPS'          =>
-          { module => 'licitacoes', method => 'irps', params => { uasg => 153229 } },
-        'Compras::Model::Materials'       => { module => 'materiais', params => { grupo => 88 } },
-        'Compras::Model::Services'        => { module => 'servicos',  params => { grupo => 542 } },
+        'Compras::Model::TradingFloors' =>
+          { query => { module => 'pregoes', params => { co_uasg => 254448 } } },
+        'Compras::Model::IRPS' =>
+          { query => { module => 'licitacoes', method => 'irps', params => { uasg => 153229 } } },
+        'Compras::Model::Materials' =>
+          { query => { module => 'materiais', params => { grupo => 88 } } },
+        'Compras::Model::Services' =>
+          { query => { module => 'servicos', params => { grupo => 542 } } },
         'Compras::Model::NoPublicBidding' => {
-            module => 'compraSemLicitacao',
-            method => 'compras_slicitacao',
-            params => { dt_publicacao => '20190701' }
+            query => {
+                module => 'compraSemLicitacao',
+                method => 'compras_slicitacao',
+                params => { dt_publicacao => '20190701' }
+            }
         },
     );
 }
@@ -55,7 +61,8 @@ sub get_model_args {
 subtest 'Testing model Institution' => sub {
     plan skip_all => 'not target' unless is_target('Compras::Model::Institutions');
     my $ua =
-      build_ua( module => 'licitacoes', method => 'orgaos', params => { nome => 'turismo' } );
+      build_search(
+        query => { module => 'licitacoes', method => 'orgaos', params => { nome => 'turismo' } } );
     my $url = $ua->url;
     is $url, 'http://compras.dados.gov.br/licitacoes/v1/orgaos.json?nome=turismo',
       "Url creation ok";
@@ -64,15 +71,15 @@ subtest 'Testing model Institution' => sub {
 };
 
 subtest 'Testing Definition Models' => sub {
-    my $ua = build_ua(
-        module  => 'materiais',
-        method  => 'material',
-        params  => { id => 17663 },
-        model => 0
+    my $ua = build_search( query => {
+        module => 'materiais',
+        method => 'material',
+        params => { id => 17663 },
+        model  => 0
+      }
     );
-    my $data = $ua->get_data;
+    my $data = $ua->search;
     ok $data->{results}, "has a result";
-    ok $data->{results}->{descricao}, "has de description";
     note explain $data->{results} if $debug;
 };
 
@@ -80,8 +87,8 @@ my %models = get_model_args;
 for my $model ( keys %models ) {
     subtest "Testing model $model" => sub {
         plan skip_all => "$model not target" unless is_target($model);
-        my $ua   = build_ua( $models{$model} );
-        my $data = $ua->get_data;
+        my $ua   = build_search( $models{$model} );
+        my $data = $ua->search;
         basic_results_for_model( $model, $data );
         note explain $data if $debug;
     };
@@ -92,8 +99,8 @@ subtest "Applying Role to Model" => sub {
     my $role  = 'Compras::Model::Roles::ExtendedAttrs';
     plan skip_all => "Not target $role" unless is_target($role);
     my %models = get_model_args;
-    my $ua     = build_ua( $models{$model} );
-    my $data   = $ua->get_data;
+    my $ua     = build_search( $models{$model} );
+    my $data   = $ua->search;
     my $res    = $data->{results};
     ok $res->size > 0, "Ok we have some results";
     my $example = $res->[0];
@@ -111,19 +118,19 @@ subtest "Applying Role ExpandLinks to Model" => sub {
     plan skip_all => "Not a target $role" unless is_target($role);
 
     my %models = get_model_args;
-    my $ua     = build_ua( $models{$model} );
-    my $data   = $ua->get_data;
+    my $ua     = build_search( $models{$model} );
+    my $data   = $ua->search;
     my $res    = $data->{results};
     ok $res->size > 0, "Ok we have some results";
     my $example = $res->[0];
     apply_role( $role, $res );
-    $example->log( $ua->_log );    # pass ua logger
+    $example->log( $ua->log );    # pass ua logger
     $example->expand_links;
 
     # check under _links expanded data
     my $links = $example->_other->{_links};
     for my $link ( keys %$links ) {
-        next if $link eq "self"; # not applicable
+        next if $link eq "self";    # not applicable
         my $href = $links->{$link};
         ok exists $href->{expanded_data}, "Retrieved successfully $link data";
         note explain $href->{expanded_data} if $debug;
@@ -136,14 +143,15 @@ subtest "Applying Role to Serialize Model" => sub {
     plan skip_all => "Not a target $role" unless is_target($role);
 
     my %models = get_model_args;
-    my $ua     = build_ua( $models{$model} );
-    my $data   = $ua->get_data;
+    my $ua     = build_search( $models{$model} );
+    my $data   = $ua->search;
     my $res    = $data->{results};
     ok $res->size > 0, "Ok we have some results";
     my $example = $res->[0];
     apply_role( $role, $res );
     ok $example->does($role), "It does $role";
-    can_ok($example, qw/to_yaml to_json/ );
+    can_ok( $example, qw/to_yaml to_json/ );
+
     # $example->to_yaml;
     # $example->to_json;
 };
